loom/crates/loom/tests/snapshots/cli_help__loom_check_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"check\"])"
---
Deterministic audits — `[verify]` scripts, style linters, and `--check=<name>` sub-audits

Usage: loom check [OPTIONS]

Options:
  -s, --spec <LABEL>      Spec label override (defaults to `current_spec`)
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi]
      --check <NAME>      Sub-audit to run (`criteria`, `matrix`, `removals`, `infrastructure`, `cross-spec`); omit to run the full deterministic pass [possible values: criteria, matrix, removals, infrastructure, cross-spec]
  -b, --bead <ID>         Restrict the audit scope to one bead
      --diff <RANGE>      Restrict the audit scope to a git diff range
      --tree              Audit the entire spec tree × implementation
      --strict            Promote warning-severity findings (e.g. orphan stubs) to errors. Applies to `--check=criteria`
      --no-run            Skip executing live verifiers — only run structural checks (stubbed, missing-dispatcher, orphan, masquerade). Applies to `--check=criteria` and is intended for the pre-commit hook path where the full live audit is too slow
  -h, --help              Print help
