loom/crates/loom/tests/snapshots/cli_help__loom_gate_review_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
assertion_line: 179
expression: "loom_help(&[\"gate\", \"review\"])"
---
Run the LLM rubric — criterion-attached judges plus the rubric walk over the diff. Expensive

Usage: loom gate review [OPTIONS] [SELECTOR]

Arguments:
  [SELECTOR]  Run one specific verifier by its annotation target (e.g. a command string for `[check]` / `[system]`, a test path for `[test]`, a rubric path for `[judge]`)

Options:
      --files <PATH>        Filter to verifiers whose scope intersects the file set (pre-commit hook fast feedback)
  -w, --workspace <PATH>    Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>     Override the agent backend for this invocation [possible values: claude, pi]
  -s, --spec <LABEL>        Filter to one spec's criteria. Defaults to `current_spec` when applicable to the subcommand
  -b, --bead <ID>           Restrict the audit scope to one bead
      --diff <RANGE>        Restrict the audit scope to a git diff range
      --tree                Audit the entire spec tree × implementation
      --verify-exit <CODE>  Exit code of a prior `loom gate verify --diff <range>` run. Threaded from `loom run`'s molecule-completion handoff so the push gate's four-condition AND can refuse on a non-zero verify exit per FR9 condition 2
  -h, --help                Print help
