loom/crates/loom/tests/snapshots/cli_help__loom_gate_system_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"gate\", \"system\"])"
---
Run only `[system]`-tier verifiers (containers, packaging, end-to-end). Slow

Usage: loom gate system [OPTIONS] [SELECTOR]

Arguments:
  [SELECTOR]  Run one specific verifier by its annotation target (e.g. a command string for `[check]` / `[system]`, a test path for `[test]`, a rubric path for `[judge]`)

Options:
      --files <PATH>      Filter to verifiers whose scope intersects the file set (pre-commit hook fast feedback)
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi]
  -s, --spec <LABEL>      Filter to one spec's criteria. Defaults to `current_spec` when applicable to the subcommand
  -b, --bead <ID>         Restrict the audit scope to one bead
      --diff <RANGE>      Restrict the audit scope to a git diff range
      --tree              Audit the entire spec tree × implementation
  -h, --help              Print help
