loom/crates/loom/tests/snapshots/cli_help__loom_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[])"
---
Loom harness CLI

Usage: loom [OPTIONS] <COMMAND>

Commands:
  init    Initialize the workspace (create `.wrapix/loom/` config + state DB)
  status  Print the active spec, current molecule, and iteration counter
  use     Set the active spec
  logs    Tail the most recent per-bead JSONL log
  spec    Inspect spec annotations and tooling dependencies
  plan    Interactive spec interview (`-n <label>` new, `-u <label>` update)
  run     Per-bead execution loop. Continuous by default; `--once` exits after one bead
  check   Post-loop reviewer + push gate
  msg     Resolve outstanding `loom:clarify` and `loom:blocked` beads
  todo    Decompose the active spec into beads (four-tier detection)
  help    Print this message or the help of the given subcommand(s)

Options:
      --workspace <PATH>  Workspace root. Defaults to the current working directory
      --agent <BACKEND>   Override the agent backend for this invocation. Wins over per-phase `[phase.<phase>] agent.backend = ...` and `[phase.default] agent.backend = ...` in `.wrapix/loom/config.toml`. Accepts `claude` or `pi`; any other value triggers a clap parse error [possible values: claude, pi]
  -h, --help              Print help
  -V, --version           Print version
