loom/crates/loom/tests/snapshots/cli_help__loom_logs_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"logs\"])"
---
Tail the most recent per-bead JSONL log

Usage: loom logs [OPTIONS]

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi]
  -h, --help              Print help

Inspect:
      --bead <BEAD>  Restrict the search to a specific bead id
